<?xml version="1.0"?>
<package format="2">
  <name>head_tracking</name>
  <version>0.0.0</version>
  <description>catkinize version of headTrack</description>
  <maintainer email="mehdi.tlili@gmail.com">mehdi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  <depend>roscpp</depend>
  <depend>cv2</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
 </package>



